CORS enable, project, other changes